# perfin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO  example-config.cfg  pyproject.toml  tox.ini
.github/workflows/: build_doc.yaml  publish.yaml  test.yaml
app/: README.md
db/: config.py  crud.py
db/models/: users.py
notebooks/: init_db.ipynb  playground.ipynb
perfin/: config.py
perfin/agent/: __init__.py  prompts.py
perfin/app/: main copy.py  main.py
perfin/app/auth/: __init__.py  login.py  users.yaml
perfin/app/elements/: __init__.py  card.py  dashboard.py  datagrid.py
perfin/app/elements/cards/: card.py  kpi.py
perfin/app/elements/plots/nivo/: pie.py  radar.py
perfin/app/models/: __init__.py  user.py
perfin/app/ui/: __init__.py  layout.py  sidebar.py  stylesheet.css
