[tool.poetry]
name = "perfin"
version = "0.1.0"
description = "A GenAI-augmented dashboard for personal finance"
authors = ["nicolai <nicolaibthomsen@gmail.com>", "christian <christian.brandborg@hotmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["personal finance", "finance", "dashboard", "streamlit", "fastapi", "genai", "langchain"]
homepage = "pypi.org/project/perfin/"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
langchain = "^0.0.286"
streamlit = "^1.26.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
plotly = "^5.16.1"
streamlit-authenticator = "^0.2.3"
watchdog = "^3.0.0"
streamlit-elements = "^0.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pre-commit = "^3.4.0"
pytest = "^7.4.2"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
